[tool.poetry]
name = "exeubot"
version = "0.19.2"
description = "A free and open-source Telegram userbot based on Telethon and fully modular."
authors = ["Elxes04"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
ipwhois = "^1.2.0"
Telethon = "^1.36.0"
cryptg = "^0.4.0"
humanize = "^4.10.0"
psutil = "^6.0.0"
speedtest-cli = "^2.1.3"
requests = "^2.32.3"
urllib3 = "^2.2.2"
tqdm = "^4.66.5"
Faker = "^26.1.0"
qrcode = "^7.4.2"
yt-dlp = "^2024.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
